syntax = "proto3";

package payment;

option go_package = "payments-go/proto";

import "google/protobuf/timestamp.proto";

// PaymentService define os serviços de pagamento
service PaymentService {
  // ProcessPayment processa um novo pagamento
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  
  // GetPayment busca detalhes de um pagamento
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  
  // CancelPayment cancela um pagamento pendente
  rpc CancelPayment(CancelPaymentRequest) returns (CancelPaymentResponse);
  
  // ListPayments lista pagamentos por order_id
  rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse);
}

// PaymentMethod representa os métodos de pagamento disponíveis
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_CREDIT_CARD = 1;
  PAYMENT_METHOD_DEBIT_CARD = 2;
  PAYMENT_METHOD_PIX = 3;
  PAYMENT_METHOD_BOLETO = 4;
  PAYMENT_METHOD_PAYPAL = 5;
}

// PaymentStatus representa os status de um pagamento
enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_PROCESSING = 2;
  PAYMENT_STATUS_APPROVED = 3;
  PAYMENT_STATUS_DECLINED = 4;
  PAYMENT_STATUS_CANCELED = 5;
  PAYMENT_STATUS_REFUNDED = 6;
}

// ProcessPaymentRequest é a requisição para processar um pagamento
message ProcessPaymentRequest {
  string order_id = 1;
  double amount = 2;
  PaymentMethod payment_method = 3;
  string customer_email = 4;
  string customer_name = 5;
  
  // Informações específicas do método de pagamento
  oneof payment_details {
    CardDetails card_details = 6;
    PixDetails pix_details = 7;
    BoletoDetails boleto_details = 8;
  }
}

// CardDetails contém informações do cartão
message CardDetails {
  string card_number = 1;
  string card_holder_name = 2;
  string expiry_date = 3; // formato: MM/YY
  string cvv = 4;
}

// PixDetails contém informações do PIX
message PixDetails {
  string pix_key = 1; // CPF, CNPJ, email, telefone ou chave aleatória
}

// BoletoDetails contém informações do boleto
message BoletoDetails {
  string customer_document = 1; // CPF ou CNPJ
  google.protobuf.Timestamp due_date = 2;
}

// ProcessPaymentResponse é a resposta do processamento de pagamento
message ProcessPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  PaymentStatus status = 3;
  string message = 4;
  string transaction_id = 5; // ID da transação no gateway de pagamento
  google.protobuf.Timestamp created_at = 6;
}

// GetPaymentRequest é a requisição para buscar um pagamento
message GetPaymentRequest {
  string payment_id = 1;
}

// GetPaymentResponse é a resposta com detalhes do pagamento
message GetPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  double amount = 3;
  PaymentMethod payment_method = 4;
  PaymentStatus status = 5;
  string transaction_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// CancelPaymentRequest é a requisição para cancelar um pagamento
message CancelPaymentRequest {
  string payment_id = 1;
  string reason = 2;
}

// CancelPaymentResponse é a resposta do cancelamento
message CancelPaymentResponse {
  bool success = 1;
  string message = 2;
  google.protobuf.Timestamp canceled_at = 3;
}

// ListPaymentsRequest é a requisição para listar pagamentos
message ListPaymentsRequest {
  string order_id = 1;
}

// ListPaymentsResponse é a resposta com lista de pagamentos
message ListPaymentsResponse {
  repeated GetPaymentResponse payments = 1;
}
